# music

./: .gitignore  README.md
ns-sounds/: README.md  ns-sounds.cabal
ns-sounds/src/Sound/Tidal/NickSeagull/: Sounds.hs
songs/: witchhouse1.tidal
