name:                ns-sounds
version:             0.1.0.0
synopsis:            Sounds for live coding, Nick Seagull
description:         See synopsis
homepage:            https://github.com/githubuser/ns-sounds#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Tidal.NickSeagull.Sounds
  build-depends:       base >= 4.7 && < 5,
                       tidal
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/ns-sounds
